--- a/DistributedTestModels/ClientTest/ClientTest.csproj
+++ b/DistributedTestModels/ClientTest/ClientTest.csproj
@@ -41,17 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventForwarder.cs" />
+    <Compile Include="LogModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpIPClientModel.cs" />
+    <Compile Include="TcpIPServerModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DistributedTestEnvironmentUI\DistributedTestEnvironmentUI.csproj">
-      <Project>{dbc933ea-099e-4dc9-b7ce-6be01ab47d44}</Project>
-      <Name>DistributedTestEnvironmentUI</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
